[gd_scene load_steps=4 format=3 uid="uid://b6d8qw4jppcnu"]

[ext_resource type="Script" path="res://settings.gd" id="1_mb0lp"]
[ext_resource type="Theme" uid="uid://8hk1826wuq1t" path="res://main_theme.tres" id="2_dwx2y"]
[ext_resource type="AudioStream" uid="uid://wqbiqb1s5fjs" path="res://audio/UI_Click_Aftertap_mono.wav" id="3_1dqpf"]

[node name="settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mb0lp")

[node name="background color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0895275, 0.0100187, 1.50409e-09, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -121.0
offset_right = 67.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio volume"

[node name="volume_slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -40.0
max_value = 4.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute audio"

[node name="mute_audio_check" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 3
item_count = 4
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "320x240"
popup/item_3/id = 3

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Window mode"

[node name="window_mode" type="OptionButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="continue_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.719
anchor_top = 0.402
anchor_right = 0.937
anchor_bottom = 0.506
offset_left = -0.0800171
offset_top = 0.0199966
offset_right = 0.159973
offset_bottom = 0.0599899
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_dwx2y")
theme_override_font_sizes/font_size = 10
text = "CONTINUE"

[node name="exit game_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.772
anchor_top = 0.862
anchor_right = 0.959
anchor_bottom = 0.954
offset_left = -0.0400085
offset_top = 0.119995
offset_right = 0.119995
offset_bottom = 0.0399933
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_dwx2y")
theme_override_font_sizes/font_size = 10
text = "EXIT GAME"

[node name="main_menu_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.772
anchor_top = 0.733
anchor_right = 0.959
anchor_bottom = 0.825
offset_left = -4.04001
offset_top = 0.0799866
offset_right = 6.12
offset_bottom = -1.52588e-05
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_dwx2y")
theme_override_font_sizes/font_size = 10
text = "MAIN MENU"

[node name="button_sound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_1dqpf")

[connection signal="value_changed" from="MarginContainer/VBoxContainer/volume_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/mute_audio_check" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/window_mode" to="." method="_on_window_mode_item_selected"]
[connection signal="pressed" from="continue_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="exit game_button" to="." method="_on_exit_game_button_pressed"]
[connection signal="pressed" from="main_menu_button" to="." method="_on_main_menu_button_pressed"]
